# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  vaatimusmaarittely.md
kare/: pyproject.toml  tasks.py
kare/dokumentaatio/: tyoaikakirjanpito.md
kare/src/entities/: sound_object.py
kare/src/services/: kare_service.py  terminal_io.py
kare/src/tests/services/: kare_service_test.py
kare/src/ui/: ui.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/entities/: sound_object.py
src/services/: kare_service.py
src/tests/services/: kare_service_test.py
src/ui/: ui.py
