[tool.poetry]
name = "kare"
version = "0.1.0"
description = ""
authors = ["aatosls <aatos.latva-somppi@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
SoundFile = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
